# solanaNoirWXMR

./: .gitignore  DEMO.sh  DEMO_GUIDE.md  DEPLOYMENT.md  Nargo.toml  PROTOCOL.md  Prover.toml  Prover_simple.toml  README.md  SYNTHWRAP.md  check_devnet.sh  compute_commitment.js  demo.sh  deploy_final_solution.sh  justfile  test_transactions.json  verify_on_solana.sh
bridge/: Anchor.toml  Cargo.toml  build.sh  build_and_deploy.sh  deploy_bridge.sh  package-lock.json  package.json
bridge/programs/bridge/: Cargo.toml
bridge/programs/bridge/src/: lib.rs
bridge/tests/: bridge.ts
client/: README.md  package-lock.json  package.json
client/src/: generateProof.ts  queryBridge.ts  verify.ts
demo/: README.md  simple-demo.sh  verify-proof.sh  verify-proof.ts
frontend/: README.md  app.js  index.html  styles.css
oracle/: .env.example  README.md  package-lock.json  package.json
oracle/scripts/: start-wallet-rpc.sh
oracle/src/: index.ts  merkleTree.ts  moneroClient.ts  moneroKeys.ts  oracleClient.ts  walletManager.ts  walletRpc.ts
oracle/src/cli/: query.ts
oracle/src/test/: fullTest.ts  walletTest.ts
oracle/wallets/: test_wallet  test_wallet_1769202509802  test_wallet_1769202509802.keys  test_wallet_1769202563410  test_wallet_1769202563410.keys  test_wallet_1769202790777  test_wallet_1769202790777.address.txt  test_wallet_1769202790777.keys  test_wallet_1769202859491  test_wallet_1769202859491.keys  test_wallet_1769202947311.keys  test_wallet_1769202996557.keys  test_wallet_1769203210703  test_wallet_1769203210703.keys
src/: main.nr
