[workspace]
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
# Force compatible versions to avoid edition2024
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }
zerocopy = { git = "https://github.com/google/zerocopy", tag = "v0.7.32" }
zerocopy-derive = { git = "https://github.com/google/zerocopy", tag = "v0.7.32" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
